@@ -1,3 +1,7 @@
+2004-04-14  Pawel Salek
+
+	* libbalsa/html.c: change op order to make gtkhtml2 happy.
+
 2004-04-14 05:50  PeterB
 
 	* src/sendmsg-window.c: be more careful when changing identities.
